src-ken&y/objects/Recurring_Template_Line__c.object
<CustomObject>
    <customHelpPage>HelpRecurringTemplates</customHelpPage>
    <fields>
        <fullName>Amount_CR__c</fullName>
        <label>Amount CR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_DR__c</fullName>
        <label>Amount DR</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Recurring Template Lines</relationshipLabel>
        <relationshipName>Recurring_Template_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Recurring Template Lines</relationshipLabel>
        <relationshipName>Recurring_Template_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Recurring_Template__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Recurring Template Lines</relationshipLabel>
        <relationshipName>Recurring_Template_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <description>Lines on this recurring template that have exceptions.</description>
        <formula>Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The line number in this recurring template that generated an exception.</inlineHelpText>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intercompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Recurring Template Lines (Intercompany)</relationshipLabel>
        <relationshipName>Recurring_Template_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Template__c</fullName>
        <label>Recurring Template</label>
        <referenceTo>Recurring_Template__c</referenceTo>
        <relationshipLabel>Recurring Template Lines</relationshipLabel>
        <relationshipName>Recurring_Template_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Recurring Template Line</label>
    <nameField>
        <label>Recurring Template Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Template Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CR_DR_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_CR__c != 0 &amp;&amp; Amount_DR__c != 0</errorConditionFormula>
        <errorMessage>Amount Debit and Amount Credit both can not be specified on the same template line. Please create separate lines for Credit and Debit.</errorMessage>
    </validationRules>
</CustomObject>